# mcp-ai-assistant

./: .env.example  .gitignore  Dockerfile  ENV_SETUP_GUIDE.md  README.md  docker-compose.yml  index.js  models.py  package.json  pyproject.toml  readiness_schema.json.example  requirements.txt  server.py  test_ai_tools.py  test_cohere_direct.py  test_db_connections.py  test_get_latest_build.py  test_llm_direct.py
agent/: agent_controller.py  context_manager.py  tool_registry.py
config/: settings.example.json
config/templates/: staging.yaml
services/: config_loader.py  config_service.py  env_loader.py  llm_client.py
services/drivers/: ci_driver.py  config_driver.py  health_driver.py  notification_driver.py
tools/: analyze_log.py  calculate_score.py  check_db.py  check_health.py  compare_config.py  fetch_build_log.py  fetch_config.py  get_latest_build.py  policy_engine.py
