[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readiness-assistant"
version = "1.0.0"
description = "AI Deployment Readiness Assistant MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "pydantic",
    "requests",
    "google-generativeai",
    "sqlalchemy",
    "psycopg2-binary",
    "httpx",
    "python-dotenv",
    "pyyaml"
]

[project.scripts]
readiness-assistant = "server:run_server"
